<resources>
    <string name="app_name">RainCatcher</string>
    <string name="actualWeather">Aktualna pogoda</string>
    <string name="temperature">Temperatura</string>
    <string name="temperatureFeeling">Temperatura odczuwalna</string>
    <string name="pressure">Ciśnienie</string>
    <string name="humidity">Wilgotność</string>
    <string name="windSpeed">Prędkość wiatru</string>
    <string name="rain">Opady deszczu</string>
    <string name="rainSum">Suma opadów w ciągu najbliższych 48 godzin</string>
    <string name="rainSumDefault">0.00</string>
    <string name="title_activity_main_activity2a">MainActivityaaaa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>